--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="register">register</string>
     <string name="email">email</string>
     <string name="info">info</string>
+    <string name="logout">logout</string>
 </resources>
