--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="email">email</string>
     <string name="info">info</string>
     <string name="logout">logout</string>
+    <string name="confirm_password">confirm password</string>
 </resources>
