--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="info">info</string>
     <string name="logout">logout</string>
     <string name="confirm_password">confirm password</string>
+    <string name="delete">delete</string>
 </resources>
